# cursesdummy

./: CMakeLists.txt  main.c
